squash an API bug related to the recent mss updates

--- a/coptic/scss/_index.scss
+++ b/coptic/scss/_index.scss
@@ -347,6 +347,7 @@ a.text-item {
 	h4.subtitle {
 		font-size:20px;
 		display:inline-block;
+		color:$coptic-brown;
 	}
 	.filter-item {
 		padding:4px 12px;
